--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles/styles.scss"
+              "src/styles/styles.scss",
+              "src/styles.scss"
             ],
             "scripts": []
           },
