--- a/package.json
+++ b/package.json
@@ -3,49 +3,65 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "lite": "lite-server",
+    "generate:component": "ng generate @sbpro/ng:component",
+    "generate:directive": "ng generate @sbpro/ng:directive",
+    "generate:module": "ng generate @sbpro/ng:module",
+    "generate:service": "ng generate @sbpro/ng:service",
+    "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
+    "storybook": "npm run docs:json && start-storybook -p 6006",
+    "build-storybook": "npm run docs:json && build-storybook",
     "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/cdk": "^13.3.9",
-    "@angular/cli": "~13.1.3",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/compiler-cli": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
-    "express": "^4.18.1",
-    "path": "^0.12.7",
-    "rxjs": "~7.4.0",
-    "tslib": "^2.3.0",
-    "typescript": "~4.5.2",
-    "zone.js": "~0.11.4"
+    "@angular/cli": "~11.2.12",
+    "@angular/compiler-cli": "~11.2.13",
+    "@angular/animations": "~11.2.13",
+    "@angular/cdk": "11.2.13",
+    "@angular/common": "~11.2.13",
+    "@angular/compiler": "~11.2.13",
+    "@angular/core": "~11.2.13",
+    "@angular/forms": "~11.2.13",
+    "@angular/material": "11.2.13",
+    "@angular/platform-browser": "~11.2.13",
+    "@angular/platform-browser-dynamic": "~11.2.13",
+    "@angular/router": "~11.2.13",
+    "@sbpro/ng": "^1.4.2",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.3",
+    "typescript": "~4.1.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.3",
-    "@types/jasmine": "~3.10.0",
+    "@angular-devkit/build-angular": "~0.1102.12",
+    
+    "@angular/elements": "^12.2.1",
+    "@babel/core": "^7.15.0",
+    "@compodoc/compodoc": "^1.1.14",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/angular": "^6.3.7",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "enhanced-resolve": "^3.3.0",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
+    "@webcomponents/custom-elements": "^1.5.0",
+    "babel-loader": "^8.2.2",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0"
-  },
-  "engines": {
-    "node": "16.13.0",
-    "npm": "8.1.0"
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0"
+    
   }
 }
