--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "private": true,
   "dependencies": {
     "@angular/cli": "~11.2.12",
+    "@angular/elements": "^12.2.1",
     "@angular/compiler-cli": "~11.2.13",
     "@angular/animations": "~11.2.13",
     "@angular/cdk": "11.2.13",
@@ -40,7 +41,6 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.12",
     
-    "@angular/elements": "^12.2.1",
     "@babel/core": "^7.15.0",
     "@compodoc/compodoc": "^1.1.14",
     "@storybook/addon-actions": "^6.3.7",
@@ -63,5 +63,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0"
     
+  },
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
   }
 }
