--- a/package.json
+++ b/package.json
@@ -24,75 +24,78 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.13",
-    "@angular/cdk": "11.2.13",
-    "@angular/common": "~11.2.13",
-    "@angular/compiler": "~11.2.13",
-    "@angular/core": "~11.2.13",
-    "@angular/forms": "~11.2.13",
-    "@angular/material": "11.2.13",
-    "@angular/platform-browser": "~11.2.13",
-    "@angular/platform-browser-dynamic": "~11.2.13",
-    "@angular/router": "~11.2.13",
-    "@sbpro/ng": "^1.4.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "@angular-devkit/build-angular": "~0.1102.12",
-    "@angular/cli": "~11.2.12",
-    "@angular/compiler-cli": "~11.2.13",
-    "@angular/elements": "^12.2.1",
-    "@babel/core": "^7.15.0",
-    "@compodoc/compodoc": "^1.1.14",
-    "@storybook/addon-actions": "^6.3.7",
-    "@storybook/addon-essentials": "^6.3.7",
-    "@storybook/addon-links": "^6.3.7",
-    "@storybook/angular": "^6.3.7",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "-": "^0.0.1",
+    "@angular-devkit/build-angular": "~14.0.5",
+    "@angular/animations": "~14.0.5",
+    "@angular/cdk": "14.0.4",
+    "@angular/cli": "~14.0.5",
+    "@angular/common": "~14.0.5",
+    "@angular/compiler": "~14.0.5",
+    "@angular/compiler-cli": "~14.0.5",
+    "@angular/core": "~14.0.5",
+    "@angular/elements": "^14.0.5",
+    "@angular/forms": "~14.0.5",
+    "@angular/material": "14.0.4",
+    "@angular/platform-browser": "~14.0.5",
+    "@angular/platform-browser-dynamic": "~14.0.5",
+    "@angular/router": "~14.0.5",
+    "@babel/core": "^7.18.6",
+    "@compodoc/compodoc": "^1.1.19",
+    "@sbpro/ng": "^3.0.0",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/angular": "^6.5.9",
+    "@types/jasmine": "~4.0.3",
+    "@types/node": "^18.0.3",
     "@webcomponents/custom-elements": "^1.5.0",
-    "babel-loader": "^8.2.2",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "babel-loader": "^8.2.5",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~4.2.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "path": "^0.12.7",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "rxjs": "~7.5.6",
+    "save": "^2.5.0",
+    "ts-node": "~10.8.2",
+    "tslib": "^2.4.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5",
-    "express": "^4.17.1"
+    "typescript": "~4.7.4",
+    "zone.js": "~0.11.6",
+    "express": "^4.18.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.12",
-    "@angular/cli": "~11.2.12",
-    "@angular/compiler-cli": "~11.2.13",
-    "@angular/elements": "^12.2.1",
-    "@babel/core": "^7.15.0",
-    "@compodoc/compodoc": "^1.1.14",
-    "@storybook/addon-actions": "^6.3.7",
-    "@storybook/addon-essentials": "^6.3.7",
-    "@storybook/addon-links": "^6.3.7",
-    "@storybook/angular": "^6.3.7",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "~14.0.5",
+    "@angular/cli": "~14.0.5",
+    "@angular/compiler-cli": "~14.0.5",
+    "@angular/elements": "^14.0.5",
+    "@babel/core": "^7.18.6",
+    "@compodoc/compodoc": "^1.1.19",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/angular": "^6.5.9",
+    "@types/jasmine": "~4.0.3",
+    "@types/node": "^18.0.3",
     "@webcomponents/custom-elements": "^1.5.0",
-    "babel-loader": "^8.2.2",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "babel-loader": "^8.2.5",
+    "codelyzer": "^6.0.2",
+    "express": "^4.18.1",
+    "jasmine-core": "~4.2.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "~10.8.2",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5",
-    "express": "^4.17.1"
+    "typescript": "~4.7.4"
   }
 }
