--- a/package.json
+++ b/package.json
@@ -1,101 +1,55 @@
 {
-  "name": "mensajeros",
+  "name": "frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "lite": "lite-server",
-    "postinstall": "ng build --configuration=production",
-    "generate:component": "ng generate @sbpro/ng:component",
-    "generate:directive": "ng generate @sbpro/ng:directive",
-    "generate:module": "ng generate @sbpro/ng:module",
-    "generate:service": "ng generate @sbpro/ng:service",
-    "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
-    "storybook": "npm run docs:json && start-storybook -p 6006",
-    "build-storybook": "npm run docs:json && build-storybook"
-  },
-  "engines": {
-    "node": "16.16.0",
-    "npm": "8.3.1"
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
-    "-": "^0.0.1",
-    "@angular-devkit/build-angular": "~14.0.5",
-    "@angular/animations": "~14.0.5",
-    "@angular/cdk": "14.0.4",
-    "@angular/cli": "~14.0.5",
-    "@angular/common": "~14.0.5",
-    "@angular/compiler": "~14.0.5",
-    "@angular/compiler-cli": "~14.0.5",
-    "@angular/core": "~14.0.5",
-    "@angular/elements": "^14.0.5",
-    "@angular/forms": "~14.0.5",
-    "@angular/material": "14.0.4",
-    "@angular/platform-browser": "~14.0.5",
-    "@angular/platform-browser-dynamic": "~14.0.5",
-    "@angular/router": "~14.0.5",
-    "@babel/core": "^7.18.6",
-    "@compodoc/compodoc": "^1.1.19",
-    "@sbpro/ng": "^3.0.0",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/angular": "^6.5.9",
-    "@types/jasmine": "~4.0.3",
-    "@types/node": "^18.0.3",
-    "@webcomponents/custom-elements": "^1.5.0",
-    "babel-loader": "^8.2.5",
-    "codelyzer": "^6.0.2",
-    "jasmine-core": "~4.2.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
+    "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.9",
+    "@angular/cli": "~13.3.0",
+    "@angular/common": "~13.3.0",
+    "@angular/compiler": "~13.3.0",
+    "@angular/compiler-cli": "~13.3.0",
+    "@angular/core": "~13.3.0",
+    "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.9",
+    "@angular/platform-browser": "~13.3.0",
+    "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/router": "~13.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
+    "ngx-bootstrap": "^8.0.0",
     "path": "^0.12.7",
-    "protractor": "~7.0.0",
-    "rxjs": "~7.5.6",
-    "save": "^2.5.0",
-    "ts-node": "~10.8.2",
-    "tslib": "^2.4.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.7.4",
-    "zone.js": "~0.11.6",
-    "express": "^4.18.1"
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "typescript": "~4.6.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.0.5",
-    "@angular/cli": "~14.0.5",
-    "@angular/compiler-cli": "~14.0.5",
-    "@angular/elements": "^14.0.5",
-    "@babel/core": "^7.18.6",
-    "@compodoc/compodoc": "^1.1.19",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/angular": "^6.5.9",
-    "@types/jasmine": "~4.0.3",
-    "@types/node": "^18.0.3",
-    "@webcomponents/custom-elements": "^1.5.0",
-    "babel-loader": "^8.2.5",
-    "codelyzer": "^6.0.2",
-    "express": "^4.18.1",
-    "jasmine-core": "~4.2.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~10.8.2",
-    "tslint": "~6.1.0",
-    "typescript": "~4.7.4"
+    "@angular-devkit/build-angular": "~13.3.0",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~4.0.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0"
+  },
+  "engines": {
+    "npm": "8.3.1",
+    "node": "16.16.0"
   }
 }
