--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,9 @@
               "src/styles/styles.scss",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/apexcharts/dist/apexcharts.min.js"
+            ]
           },
           "configurations": {
             "production": {
