--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~13.3.0",
     "@angular/animations": "~13.3.0",
     "@angular/cdk": "^13.3.9",
     "@angular/cli": "~13.3.0",
@@ -28,9 +29,10 @@
     "@angular/router": "~13.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@angular-devkit/build-angular": "~13.3.0",
+    "apexcharts": "^3.35.5",
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
+    "ng-apexcharts": "^1.7.1",
     "ngx-bootstrap": "^8.0.0",
     "path": "^0.12.7",
     "rxjs": "~7.5.0",
@@ -39,7 +41,6 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
